<resources>
    <string name="app_name">KisaanDost</string>
    <string name="hello_world">Language</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="about_us">About_us</string>
    <string name="next">NEXT</string>
    <string name="title_activity_home_page">Home_page</string>
    <string name="marketprice">Market price</string>
    <string name="Equipments">Equipments</string>
    <string name="Technique">Techniques</string>
    <string name="schemes">Schemes</string>
    <string name="title_activity_market_price">MarketPrice</string>
    <string name="title_activity_scheme_manager">SchemeManager</string>
    <string name="title_activity_display_manager">DisplayManager</string>
    <string name="WhatToDo">What To Do:</string>
    <string name="whomtocontact">Whom To Contact:</string>
    <string name="DocumentRequired">Document Required:</string>
    <string name="scheme">Scheme:</string>
    <string-array name="soil">
        <item>SOIL</item>
        <item>• Always use appropriate fertilizer in right quantity based on soil test.</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Bio-fertilizers(Rhyzobium/PSB)</item>
        <item>50percentage of the cost limited to Rs 100/- per hectare.</item>
        <item>Assistance for Soil Improvement</item>
        <item>National Food Security Mission (NFSM)</item>
        <item>Reclamation of Problem Soil</item>
        <item>Alkaline/Saline Soil:50percentage of cost to a limit of Rs 25,000/-
            per hectare. and or Rs 50,000/- per beneficiary.
             Acidic Soil:50percentage of cost subject to a limit of Rs 3000/- per hectare.
              and/or Rs6000/- per beneficiaries.</item>
        <item>Assistance for Soil Improvement</item>
        <item>National Mission for Sustainable Agriculture (NMSA)</item>
        <item>Plant protection chemicals</item>
        <item>Insecticides,fungicides,bio-pesticides,bio-agents,micro nutrients,bio-fertilizers etc.</item>
        <item>Assistance for Soil Improvement</item>
        <item>National Mission of Oilseeds and Oil Palm (NMOOP)</item>
    </string-array>
    <string-array name="seeds">
        <item>SEEDS</item>
        <item>• Always use recommended variety of seeds as per local climate and adopt recommended seed rate and spacing.\n
			• Replace seeds of wheat, paddy, barley, pulses (except arhar), oilseeds (except rapeseed, mustard and sunflower) once in three years, seeds of maize, bajra, jowar, arhar, rapeseed, mustard and sunflower once in</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Coarse cereals - Hybrid seeds</item>
        <item>Rs 50/- per kg or 50percentage of cost whichever is less</item>
        <item>Assistance for Seed Distribution</item>
        <item>National Food Security Mission (NFSM)</item>
        <item>HYV seeds of Paddy and Wheat</item>
        <item>Rs 10/- per kg or 50percentage of the cost whichever is less</item>
        <item>Assistance for Seed Distribution</item>
        <item>National Food Security Mission (NFSM)</item>
        <item>Assistance for boosting seed production in private sector including individual or entrepreneurs, self help groups etc.</item>
        <item>Credit-linked back-ended capital subsidy at the rate of 40percentage of project cost in general areas and 50percentage in case of hill areas and scheduled areas subject to upper limit of Rs 150 lakhs per project.</item>
        <item>Assistance for Production of Foundation and Certified Seeds</item>
        <item>National Mission on Agricultural Extension and Technology (NMAET)</item>
    </string-array>
    <string-array name="Irrigation">
        <item>Irrigation</item>
        <item>• Conserve soil and water through good agricultural practices.\n
• Harvest rain water through construction of check dams and ponds.\n
• Adopt crop diversification , seed production and nursery raising in water logged areas.\n
• Adopt drip and sprinkler irrigation system to save 30-37percentage water and enhance crop quality and productivity</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Construction of new Farm Ponds with lining to reduce the percolation losses</item>
        <item>Rs 40,000/- per pond of 20m x 20m x 3m for construction and Rs 40,000/- for lining purpose</item>
        <item>Irrigation Management</item>
        <item>National Mission of Oilseeds and Oil Palm (NMOOP)(NFSM)</item>
        <item>Water lifting Devices (Electric, Diesel, Wind/ Solar)</item>
        <item>50percentage of the cost of installation limited to Rs 15,000/- per electric/diesel unit andRs 50,000/- per solar/wind unit.</item>
        <item>Water Harvesting and Management</item>
        <item>National Mission for Sustainable Agriculture (NMSA)(NMAET)</item>
        <item>Drip Irrigation</item>
        <item>25-35percentage of the total cost of installation in nonDPAP/DD regions and 35-50percnetage in DPAP/DDP region Additional 10percentage assistanceto be provided by State Govt. (DPAP-Drought Prone Area Programme, DDP-Desert Development Programme, NEandH states –
              North Eastern and Himalayan States) Upper limit of assistance will be restricted to the
              amount as per the eligible pattern of assistance of the normative cost of installation.
              Normative cost of installation for wide spaced crops Rs 37,200/ha (average) and for
               close spaced crops Rs 90,000/ha (average). However, the cost will vary depending on crop
               spacing and land size. Maximum permissible assistance will be restricted to 5 ha per beneficiary/group</item>
        <item>Drip Irrigation</item>
        <item>National Mission for Sustainable Agriculture (NMSA)</item>
    </string-array>
    <string name="Training_For_Farmer">Training For Farmer</string>
    <string name="Agriculture_Credit">Agriculture Credit</string>
    <string name="Agriculture_Insuarance">Agriculture Insuarance</string>
    <string name="Plant_Protection">Plant Protection</string>
    <string-array name="Mechanization">
        <item>Mechanization</item>
        <item>• Procure appropriate machinery/ equipment as per land</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Procurement subsidy for establishment Establishment of Farm Machinery Banks for of Custom Hiring Centre upto Rs. 60 lakhs under SMAM</item>
        <item>Maximum Permissible Project Cost - Project based Rs 24 lakhs</item>
        <item>Establishment of Farm Machinery Banks for Custom Hiring under SMAM</item>
        <item>Farm Mechanisation Scheme(Central Schemes)</item>
        <item>Financial Assistance for Farm Machinery Equipment under NFSM</item>
        <item>Rs. 600/- per machine or 50percentage of the cost whichever is less for Rice Crop is admissible only</item>
        <item>Financial Assistance for procurement of Agricultural Machinery and Equipment under NFSM</item>
        <item>Farm Mechanisation Scheme(Central Schemes)</item>
        <item>Financial Assistance for Farm Machinery Equipment under NFSM</item>
        <item>Rs. 1500/- per machine or 50percentage of the cost whichever is less for Rice Crop is admissible only</item>
        <item>Financial Assistance for procurement of Agricultural Machinery and Equipment under NFSM</item>
        <item>Farm Mechanisation Scheme(Central Schemes)</item>
    </string-array>
    <string name="Agriculture_Marketing">Agriculture Marketing</string>
    <string name="Integrated_Farming">Integrated Farming</string>
    <string-array name="Horticulture">
        <item>Horticulture</item>
        <item>• Adopt horticultural crops for higher income from lesser area.\n
• For healthy crop plant use high quality seedlings.\n
• To keep fruits and vegetables fresh for longer period, use cold storage facility/cool houses.
• Earn maximum profit by adopting correct method of harvesting, cleaning, grading, processing and packing.\n
• Produce off-season vegetables in poly-house, low-tunnel.</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Bee Keeping for pollination support for bee hives (Maximum 50 colonies / beneficiary)</item>
        <item>Rs. 800/- per hive</item>
        <item>Assistance under Horticulture</item>
        <item>Sub Schemes of NHM and HMNEH under MIDH</item>
        <item>Flowers (Loose bulbous and cut flowers) (Maximum 2 hectares / beneficiary)</item>
        <item>Rs.16,000/- per ha to Rs.60,000/- per ha</item>
        <item>Assistance under Horticulture</item>
        <item>Sub Schemes of NHM and HMNEH under MIDH</item>
        <item>Establishing of new fruits orchard with integration of drip etc (for a Maximum area of 4 ha per beneficiary)</item>
        <item>Rs. 0.40 lakh per ha. to Rs. 2.20 lakh/ha.</item>
        <item>Assistance under Horticulture</item>
        <item>Sub Schemes of NHM and HMNEH under MIDH</item>
    </string-array>
    <string-array name="type_of_crop">
        <item>Food Grains</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Non-Food Crops</item>
    </string-array>
    <string-array name="Training">
        <item>Training</item>
        <item>• 25,000 functionaries dedicated for agricultural extension are being provided at the Block level and below, under the</item>
        <item>• Adhaar Card\n
            • Voter Card</item>
        <item>District Agriculture Officer / District Soil Conservation Officer</item>
        <item>Training on Repair, Maintenance, Operation and selection of various Agricultural Machinery and Equipments and Post Harvest Management</item>
        <item>Rs 4000/- per person</item>
        <item>Assistance for Training of Farmers</item>
        <item>Sub- Mission on Agricultural Mechanization (SMAM)(NMSA)</item>
        <item>Assistance for training on seed production and seed technology for a group of 50 to 150 farmers</item>
        <item>Rs 15,000/- per training (for 3 one-day training programmes): (i)At the time of sowing of seed crop: training on seed production technique, isolation distance, sowing practices and other agronomic practices.(ii)At the time of flower initiation stage of the crop.(iii)After harvest and at the time of seed processin</item>
        <item>Training and Extension for Farmers under National Mission for Sustainable Agriculture (NMSA)</item>
        <item>Seed Village Programme</item>
        <item>Training and Demonstration on Soil Health	</item>
        <item>Training to farmers including field demonstrations; Rs 10,000/-per training session for 20 participants or more.Rs 20,000/- per Front Line Field Demonstration</item>
        <item>Training and Extension for Farmers under National Mission for Sustainable Agriculture (NMSA)</item>
        <item>National Mission for Sustainable Agriculture (NMSA)</item>
    </string-array>
</resources>