<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piyush.kisaandost.FarmerManager">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:background="@drawable/home_page"
   >


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:background="@drawable/home_page" >
    </RelativeLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@drawable/round_edge"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/marketprice" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:background="@drawable/round_edge"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/schemes" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/button2"
        android:background="@drawable/round_edge"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Equipments" />
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/button3"
        android:background="@drawable/round_edge"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Technique" />

</RelativeLayout>
</android.support.constraint.ConstraintLayout>
