<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piyush.kisaandost.SchemeManager">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Schemes"/>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/soil_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/soil"/>
                    <TextView
                        android:id="@+id/soil_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/soil" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/seed_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/seeds"/>
                    <TextView
                        android:id="@+id/seed_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:text="@string/seeds" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/irrigation_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/irrigation"/>
                    <TextView
                        android:id="@+id/irrigation_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/Irrigation" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/training_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/farmertraining"/>
                    <TextView
                        android:id="@+id/training_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:text="@string/Training_For_Farmer" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/credit_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/credit"/>
                    <TextView
                        android:id="@+id/credit_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/Agriculture_Credit" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/insurance_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/insurance"/>
                    <TextView
                        android:id="@+id/insurance_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:text="@string/Agriculture_Insuarance" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/protection_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/plantprotection"/>
                    <TextView
                        android:id="@+id/protection_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/Plant_Protection" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/mechanization_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/mechanizationtechnology"/>
                    <TextView
                        android:id="@+id/mechanization_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:text="@string/Mechanization" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/marketing_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/agriculturemarketing"/>
                    <TextView
                        android:id="@+id/marketing_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/Agriculture_Marketing" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/integrated_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="50dp"
                        android:src="@drawable/integratedfarming"/>
                    <TextView
                        android:id="@+id/integrated_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:text="@string/Integrated_Farming" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/horticulture_button"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/horticulture"/>
                    <TextView
                        android:id="@+id/horticulture_text"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:text="@string/Horticulture" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>





</LinearLayout>
</android.support.constraint.ConstraintLayout>
